--- a/package.json
+++ b/package.json
@@ -26,11 +26,14 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.7",
     "normalize.css": "^8.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-modal": "^3.16.1",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
+    "uuid": "^10.0.0",
     "validator": "^13.12.0"
   }
 }
