--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
   "description": "",
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.7",
+    "dayjs": "^1.11.13",
     "normalize.css": "^8.0.1",
     "react": "^18.3.1",
+    "react-datepicker": "^7.4.0",
     "react-dom": "^18.3.1",
     "react-modal": "^3.16.1",
     "react-redux": "^9.1.2",
