--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
   "description": "",
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.7",
+    "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
     "normalize.css": "^8.0.1",
     "react": "^18.3.1",
+    "react-date-range": "^2.0.1",
     "react-datepicker": "^7.4.0",
     "react-dom": "^18.3.1",
     "react-modal": "^3.16.1",
