--- a/package.json
+++ b/package.json
@@ -9,9 +9,17 @@
     "@babel/plugin-transform-object-rest-spread": "^7.24.7",
     "@babel/preset-env": "^7.24.8",
     "@babel/preset-react": "^7.24.7",
+    "@testing-library/react": "^16.0.1",
+    "babel-jest": "^29.7.0",
     "babel-loader": "^9.2.1",
     "css-loader": "^7.1.2",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^29.7.0",
+    "jest-css-modules-transform": "^4.4.2",
+    "jest-transform-css": "^6.0.1",
     "node-sass": "^9.0.0",
+    "react-test-renderer": "^18.3.1",
+    "redux-mock-store": "^1.5.4",
     "sass-loader": "^16.0.2",
     "style-loader": "^4.0.0",
     "webpack": "^5.94.0",
@@ -20,7 +28,8 @@
   },
   "scripts": {
     "build": "webpack",
-    "dev-server": "webpack-dev-server"
+    "dev-server": "webpack-dev-server",
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
