--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "jest": "^29.7.0",
     "jest-css-modules-transform": "^4.4.2",
     "jest-transform-css": "^6.0.1",
+    "mini-css-extract-plugin": "^2.9.1",
     "node-sass": "^9.0.0",
     "react-test-renderer": "^18.3.1",
     "redux-mock-store": "^1.5.4",
@@ -42,6 +43,8 @@
     "dayjs": "^1.11.13",
     "live-server": "^1.2.2",
     "normalize.css": "^8.0.1",
+    "numeral": "^2.0.6",
+    "postcss-loader": "^8.1.1",
     "react": "^18.3.1",
     "react-date-range": "^2.0.1",
     "react-datepicker": "^7.4.0",
