--- a/package.json
+++ b/package.json
@@ -39,12 +39,14 @@
   "description": "",
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.7",
+    "cors": "^2.8.5",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
     "live-server": "^1.2.2",
+    "moment": "^2.30.1",
+    "mongodb": "^6.9.0",
     "normalize.css": "^8.0.1",
     "numeral": "^2.0.6",
-    "postcss-loader": "^8.1.1",
     "react": "^18.3.1",
     "react-date-range": "^2.0.1",
     "react-datepicker": "^7.4.0",
@@ -52,7 +54,7 @@
     "react-modal": "^3.16.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
-    "uuid": "^10.0.0",
-    "validator": "^13.12.0"
+    "redux-thunk": "^3.1.0",
+    "uuid": "^10.0.0"
   }
 }
