--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "cors": "^2.8.5",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
+    "js-cookie": "^3.0.5",
     "live-server": "^1.2.2",
     "moment": "^2.30.1",
     "mongodb": "^6.9.0",
